--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "caouecs/laravel-lang": "~3.0",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "^5.6",
         "laravel/tinker": "^1.0",
         "maddhatter/laravel-fullcalendar": "^1.3",
+        "nesbot/carbon": "~1.21",
         "pragmarx/countries-laravel": "^0.5.2",
         "zizaco/entrust": "5.2.x-dev"
     },
