--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
         "maddhatter/laravel-fullcalendar": "^1.3",
         "nesbot/carbon": "~1.21",
         "pragmarx/countries-laravel": "^0.5.2",
+        "predis/predis": "^1.1",
+        "socialiteproviders/battlenet": "^2.0",
+        "socialiteproviders/microsoft-live": "^3.0",
+        "socialiteproviders/qq": "^3.0",
+        "uxweb/sweet-alert": "^1.4",
         "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
